--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -2,16 +2,13 @@ serenity {
     take.screenshots = FOR_FAILURES
 }
 
-headless.mode = true
+headless.mode = false
+
 webdriver {
   driver = chrome
-  capabilities {
-    browserName = "chrome"
-    acceptInsecureCerts = true
-    "goog:chromeOptions" {
-      args = ["remote-allow-origins=*","test-type", "no-sandbox", "ignore-certificate-errors", "--window-size=1000,800",
-        "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking",
-        "disable-dev-shm-usage", "disable-extensions", "disable-web-security", "disable-translate", "disable-logging"]
-    }
-  }
+  autodownload = tru
 }
+
+chrome.switches = """--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
+                    --disabled-popup-blocking;--disabled-default-apps;--disabled-extensions-file-access-check;
+                    --incognito;--disabled-inforbars;--disabled-gpu""""
